--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
         
         <div class="container text-center">
             <div class="row">
-              <div class="col-sm-1 col-md-12 col-lg-12 Blue">
+              <div class="col1 col-md-12 col-lg-12 Blue">
                 Blue
               </div>
             </div>
             <div class="row">
-              <div class="col-sm-1 col-md-12 col-lg-6 Yellow">
+              <div class="col1 col-md-12 col-lg-6 Yellow">
                 Yellow
               </div>
-              <div class="col-sm-1 col-md-6 col-lg-3 Gray">
+              <div class="col1 col-md-6 col-lg-3 Gray">
                 Gray
               </div>
-              <div class="col-sm-1 col-md-6 col-lg-3 Red">
+              <div class="col1 col-md-6 col-lg-3 Red">
                 Red
               </div>
             </div>
           </div>
           <div class="container text-center">
             <div class="row">
-              <div class="col-sm-1 col-md-12 col-12 Green">
+              <div class="col1 col-md-12 col-lg-12 Green">
                 Green
               </div>
             </div>       
